# og

./: .gitignore  BENCHMARKS.md  README.md  dune  dune-project  og.opam  optimisations.md
lib/: aho_corasick.ml  aho_corasick.mli  bitset.ml  bitset.mli  buffered_reader.ml  buffered_reader.mli  character_class.ml  character_class.mli  character_rule.ml  character_rule.mli  charset.ml  charset.mli  dfa.ml  dfa.mli  dune  flags.ml  flags.mli  glob.mll  glob_ignore.ml  glob_ignore.mli  iarray.ml  iarray.mli  implementation.ml  import.ml  literal.ml  nfa.ml  nfa.mli  nfa_base.ml  nfa_base.mli  nfa_hybrid.ml  nfa_hybrid.mli  nfa_thompson.ml  nfa_thompson.mli  og.ml  parser.ml  parser.mli  regex.ml  regex.mli  regex0.ml  slice.ml  (+8 more)
ppx/: dune  ppx_og.ml
test/: dune  test_boyer_moore.ml  test_matching.ml  test_nfa.ml  test_parser.ml  test_slice.ml
utils/: I64.ml  I64.mli  array.ml  array.mli  bitset.ml  buffered_reader.ml  buffered_reader.mli  charmap.ml  charmap.mli  config.ml  dune  dynarray.ml  iarray.ml  iarray.mli  intrinsics.ml  og_utils.ml  slice.ml  slice.mli  slice_intf.ml  slice_stubs.c
