(env
 (release
  (ocamlopt_flags :standard -O3 -g -gno-upstream-dwarf -gstartup
   -gdwarf-may-alter-codegen))
 (dev
  (ocamlopt_flags
   :standard
   -g
   -gno-upstream-dwarf
   ; FIXME: I think there's a bug in the DWARF backend, maybe try re-enabling
   ; these another time.
   ; -gstartup -gdwarf-may-alter-codegen
   )))

(rule
 (targets config.h)
 (action
  (with-stdout-to
   config.h
   (run echo "#define DUNE_BUILD_PROFILE \"%{profile}\""))))
