(lang dune 3.16)

(name og)

(generate_opam_files true)

(source
 (github matthewelse/og))

(authors "Matthew Else")

(maintainers "Matthew Else")

(license MIT)

(documentation https://github.com/matthewelse/og)

(package
 (name og)
 (synopsis "An implementation of grep in OCaml")
 (description "")
 (depends ocaml dune)
 (tags (grep)))
